--- a/admin/css/estilos.css
+++ b/admin/css/estilos.css
@@ -288,3 +288,31 @@ form select {
 .nueva-foto input[type="file"] {
   padding: 10px 0;
 }
+
+/*cerrar sesión*/
+table { width: 100%; border-collapse: collapse; }
+        th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
+        img { width: 80px; height: auto; }
+        a.op { margin: 0 5px; text-decoration: none; }
+
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .cerrar-sesion {
+            background-color: #00bfbf;
+            color: white;
+            padding: 8px 14px;
+            border: none;
+            border-radius: 6px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .cerrar-sesion:hover {
+            background-color: #009a9a;
+        }
