--- a/admin/css/estilos.css
+++ b/admin/css/estilos.css
@@ -290,29 +290,31 @@ form select {
 }
 
 /*cerrar sesión*/
-table { width: 100%; border-collapse: collapse; }
-        th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
-        img { width: 80px; height: auto; }
-        a.op { margin: 0 5px; text-decoration: none; }
+.contenedor-boton {
+    text-align: right;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .btn-custom {
+    background-color: #009999;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+  }
+  
+  .btn-custom:hover {
+    background-color: #007f7f;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+  }
 
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
 
-        .cerrar-sesion {
-            background-color: #00bfbf;
-            color: white;
-            padding: 8px 14px;
-            border: none;
-            border-radius: 6px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
 
-        .cerrar-sesion:hover {
-            background-color: #009a9a;
-        }
+ 
